[package]
name = "arweave-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.21.5"
borsh = "1.2.0"
serde = { version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"]}
serde_json = { version = "1.0.108", features = [] }
borsh-derive = "1.2.0"
url = "2.4.1"
thiserror = "1.0.50"
infer = "0.15.0"
serde-aux = "4.2.0"
boring = "4.1.0"
jsonwebkey = { version = "0.3.5",  features = [ "pkcs-convert" ]}
