[package]
name = "arweave-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.21.5"
borsh = "1.2.0"
serde = { version = "1.0.193", features = ["derive"]}
tokio = { version = "1.34.0", features = ["full"]}
serde_json = { version = "1.0.108", features = [] }
borsh-derive = "1.2.0"
url = "2.4.1"
thiserror = "1.0.50"
infer = "0.15.0"
serde-aux = "4.2.0"
boring = "4.1.0"
jsonwebkey = { version = "0.3.5",  features = [ "pkcs-convert" ]}
apache-avro = "0.16.0"
lazy_static = { version = "1.4.0", features = [] }
bytes = "1.5.0"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
bip32 =  { version = "0.5.1", features = ["bip39", "mnemonic"] }
ethsign = { version = "0.9.0", features = ["pure-rust"] }
k256 = "0.13.2"
bitcoin = "0.31.0"
bip39 = "2.0.0"
ethaddr = "0.2.2"
hex = "0.4.3"
sha3 = "0.10.8"

