[package]
name = "arweave-sdk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.22.0"
borsh = "1.3.1"
serde = { version = "1.0.197", features = ["derive"]}
tokio = { version = "1.36.0", features = ["full"]}
serde_json = { version = "1.0.114", features = [] }
borsh-derive = "1.3.1"
url = "2.5.0"
thiserror = "1.0.57"
infer = "0.15.0"
serde-aux = "4.2.0"
boring = "4.1.0"
jsonwebkey = { version = "0.3.5",  features = [ "pkcs-convert" ]}
apache-avro = "0.16.0"
lazy_static = { version = "1.4.0", features = [] }
bytes = "1.5.0"
async-trait = "0.1.77"
reqwest = { version = "0.11.24", default-features = false, features = ["default-tls", "json"] }
bip32 =  { version = "0.5.1", features = ["bip39", "mnemonic"] }
k256 = "0.13.3"
bitcoin = "0.31.1"
bip39 = "2.0.0"
ethaddr = "0.2.2"
hex = "0.4.3"
sha3 = "0.10.8"
libsecp256k1 = "0.7.1"
async-stream = "0.3.5"
futures = "0.3.30"
futures-core = "0.3.30"
backoff= { version = "0.4.0", features = ["tokio"] }